# qvisualisation

./: CMakeLists.txt  README.md  appveyor.yml
core/: visualisationviewmodel.cpp  visualisationviewmodel.h  visualisationviewwidget.cpp
